[Code Health] Replace anonymous classes with lambdas in hub, init
This change applies several IDE-driven cleanups to improve readability
and code health in org.chromium.chrome.browser (hub, identity_disc,
incognito, init):

- Anonymous type can be replaced with lambda
- Anonymous type can be replaced with method reference
- Inline variable / Redundant local variable
- Redundant type cast
- Unnecessary unboxing

Bug: 541671762
Change-Id: Ia0834669cec26f94eaf99cce50aa23ec0b825901
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/8300435
Reviewed-by: Sky Malice <skym@chromium.org>
Auto-Submit: Gazal Agarwal <agazal@google.com>
Commit-Queue: Sky Malice <skym@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1687575}